--- a/package.json
+++ b/package.json
@@ -9,17 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.1.13",
+    "framer-motion": "^10.16.4",
+    "latex.js": "^0.12.6",
     "next": "13.5.6",
     "openai": "^4.14.2",
     "openai-api": "^1.3.1",
+    "prismjs": "^1.29.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.9",
     "autoprefixer": "^10",
+    "daisyui": "^3.9.4",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
     "postcss": "^8",
