--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.1.13",
+    "@nextui-org/react": "^2.2.0",
+    "encoding": "^0.1.13",
     "framer-motion": "^10.16.4",
     "latex.js": "^0.12.6",
     "next": "13.5.6",
