--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.0",
+    "@types/animejs": "^3.1.11",
     "animejs": "^3.2.1",
     "encoding": "^0.1.13",
     "framer-motion": "^10.16.4",
