--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.2.0",
     "@types/animejs": "^3.1.11",
     "animejs": "^3.2.1",
+    "axios": "^1.6.2",
     "encoding": "^0.1.13",
     "framer-motion": "^10.16.4",
     "latex.js": "^0.12.6",
