--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "axios": "^1.6.2",
     "encoding": "^0.1.13",
     "framer-motion": "^10.16.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "jspdf-html2canvas": "^1.5.1",
     "latex.js": "^0.12.6",
     "next": "13.5.6",
+    "node-latex": "^3.1.0",
     "openai": "^4.19.1",
     "openai-api": "^1.3.1",
     "prismjs": "^1.29.0",
